JSAI/error/src/test/resources/base/v015.js

var x = "1" + "foo";
print(x);